4 files modified, 15 added, 14 deleted

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
   <app-root>loading</app-root>
+  <!-- <img class="img-responsive" src="assets/images/1082529.jpg"> -->
 </body>
 </html>
